# TreadmillAutomation-Perturbation

./: .CMakeLists.txt.swp  .gitignore  .vimrc  .ycm_extra_conf.py  02022017-WorkingOnInstPanel.vim  05012018-WorkingOnInstPanel.vim  08012017-WorkingOnInstPanel.vim  08022017-WorkingOnInstPanel.vim  12012017-WorkingOnInstPanel.vim  15022018-WorkingOnInstPanel.vim  16022017-WorkingOnSessionId.vim  17012018-WorkingOnInstPanel.vim  29March20181111.vim  CMakeLists.txt  CMakeListsWindows.txt  CMakeListsWorking.txt  Doxyfile  EmgScope.vim  HeatMap.qml  README  Treadmill.pro  Treadmill.pro_old  TreadmillAutomation.db  TreadmillAutomation.db_old  TreadmillAutomation.pro  TreadmillAutomation_old.db  b6  comport
StimFiles/DS8 Library/: ExampleCode.cpp
doc/: ProjectSummary.odt  ProjectSummaryPosterVersion.docx  ProjectSummaryPosterVersion.odt  Safeguard 7-6-18.xlsx  TODO.txt  TachometerFailsafe.xlsx  safeguards
doc/html/: _config_tab_widget_8cpp.html  _config_tab_widget_8cpp__incl.map  _config_tab_widget_8cpp__incl.md5  _config_tab_widget_8cpp_source.html  _data_collection_8cpp.html  _data_collection_8cpp__incl.map  _data_collection_8cpp__incl.md5  _data_collection_8cpp_source.html  _data_source_8cpp.html  _data_source_8cpp__incl.map  _data_source_8cpp__incl.md5  _data_source_8cpp_source.html  _instrumentation_panel_8cpp.html  _instrumentation_panel_8cpp__incl.map  _instrumentation_panel_8cpp__incl.md5  _instrumentation_panel_8cpp_source.html  _manage_profile_tab_widget_8cpp.html  _manage_profile_tab_widget_8cpp__incl.map  _manage_profile_tab_widget_8cpp__incl.md5  _manage_profile_tab_widget_8cpp_source.html  _mcc_daq_connect_button_widget_8cpp.html  _mcc_daq_connect_button_widget_8cpp__incl.map  _mcc_daq_connect_button_widget_8cpp__incl.md5  _mcc_daq_connect_button_widget_8cpp_source.html  _mcc_daq_discovery_8cpp.html  _mcc_daq_discovery_8cpp__incl.map  _mcc_daq_discovery_8cpp__incl.md5  _mcc_daq_discovery_8cpp_source.html  _mcc_daq_interface_8cpp.html  _mcc_daq_interface_8cpp__incl.map  _mcc_daq_interface_8cpp__incl.md5  _mcc_daq_interface_8cpp_source.html  _mcc_daq_record_button_widget_8cpp.html  _mcc_daq_record_button_widget_8cpp__incl.map  _mcc_daq_record_button_widget_8cpp__incl.md5  _mcc_daq_record_button_widget_8cpp_source.html  _mouse_interface_8cpp.html  _mouse_interface_8cpp__incl.map  _mouse_interface_8cpp__incl.md5  _mouse_interface_8cpp_source.html  (+61 more)
doc/latex/: _config_tab_widget_8cpp.tex  _config_tab_widget_8cpp__incl.md5  _data_collection_8cpp.tex  _data_collection_8cpp__incl.md5  _data_source_8cpp__incl.md5  _instrumentation_panel_8cpp.tex  _instrumentation_panel_8cpp__incl.md5  _mcc_daq_discovery_8cpp.tex  (+35 more)
images/: Rev135_6.xcf  Thumbs.db
include/: .DataSource.h.swp  .MccDaqInterface.h.swp  .MouseInterface.h.swp  .PerturbationTabWidget.h.swp  .QualisysInterface.h.swp  .TreadmillAutomationDbIFace.h.swp  ChannelModel.h  ConfigTabWidget.h  ConfigTabWidget.h_testing  D128API.h  DS8library.h  DataCollection.h  DataSource.h  EmgChannel.h  InstrumentationPanel.h  ManageProfileTabWidget.h  MccDaqConnectButtonWidget.h  MccDaqDiscovery.h  MccDaqInterface.h  MccDaqRecordButtonWidget.h  MouseInterface.h  NetworkTabWidget.h  ParseRunProfile.h  PerturbationTabWidget.h  QmlInterface.h  QualisysInterface.h  QualisysInterfaceInput.h  QualisysInterfaceOutput.h  ReadTrialNameFile.h  RecordTreadmillStream.h  SendSetpoints.h  StimulatorInterface.h  SubjectInterface.h  SubjectInterfaceWidget.h  TreadmillAutomation.h  TreadmillAutomationDbIFace.h  cbw.h  moc_NetworkTabWidget.cpp  moc_PerturbationTabWidget.cpp  moc_TreadmillAutomation.cpp
lib/: DS8library.lib  NIDAQmx.lib  RTClientSDK.lib  cbw32.lib  cbw64.lib
src/: .DataCollection.cpp.swp  .MainSubjectInterface.qml.swp  .MccDaqInterface.cpp.swo  .MccDaqInterface.cpp.swp  .MouseInterface.cpp.swp  .PersonSessionStimData.qml.swp  .PerturbationTabWidget.cpp.swp  .RecordTreadmillStream.cpp.swp  .SendSetpoints.cpp.swp  .Smiley.qml.swp  .SmileyGone.qml.swp  .SubjectInterface.qml.swp  .Timer.qml.swp  .TreadmillAutomation.cpp.swp  .vimrc  Channel1.qml  Channel1ScopeView.qml  Channel2.qml  Channel2ScopeView.qml  Channel3.qml  Channel3ScopeView.qml  Channel4.qml  Channel4ScopeView.qml  Channel5.qml  Channel5ScopeView.qml  Channel6.qml  Channel6ScopeView.qml  Channel7.qml  Channel7ScopeView.qml  Channel8.qml  Channel8ScopeView.qml  ChannelModel.cpp  ChannelPanel.qml  ColorRectangle.qml  ConfigTabWidget.cpp  ConfigTabWidget.cpp_testing  ControlPanel.qml  DaqInScan02.C  DataCollection.cpp  DataSource.cpp  (+42 more)
src/RTClientSDK/: .CMakeLists.txt.swp  CMakeLists.txt  Markup.cpp  Network.cpp  RTPacket.cpp  RTProtocol.cpp
vimsessions/: 011April20180001.vim  03April20180001.vim  04012018-WorkingOnInstPanel.vim  06022018-WorkingOnInstPanel.vim  08June2018.vim  09012018-WorkingOnInstPanel.vim  09022018-WorkingOnInstPanel.vim  09May2018.vim  10May2018.vim  11May2018.vim  13012018-WorkingOnInstPanel.vim  13April2018.vim  13May2018.vim  14May2018.vim  17May2018.vim  18012018-WorkingOnInstPanel.vim  18May2018.vim  22012018-WorkingOnInstPanel.vim  22022017-WorkingOnSessionId.vim  23May2018.vim  24May2018.vim  25May2018.vim
(+8064 files in other folders)
